--- a/index.html
+++ b/index.html
@@ -1,21 +1,1 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=288, user-scalable=no">
-    <title>got-cake</title>
-  </head>
-  <body>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` in this folder.
-      To create a production bundle, use `npm run build`.
-    -->
-  </body>
-</html>
+<!DOCTYPE html><html lang="en"><head><meta charset="utf-8"><meta name="viewport" content="width=288,user-scalable=no"><title>got-cake</title><link rel="shortcut icon" href="/flappy-bird/favicon.ico"><link href="/flappy-bird/static/css/main.d4281643.css" rel="stylesheet"></head><body><div id="root"></div><script type="text/javascript" src="/flappy-bird/static/js/main.51c9f3a8.js"></script></body></html>
